--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 androguard==4.1.3
-pandas>=2.3.0
-scikit-learn>=1.6.0
+pandas==2.2.2
+scikit-learn==1.5.1
 xgboost==2.1.0
 joblib==1.4.2
 fastapi==0.112.0
