feat: Implement WebSocket service for real-time APK analysis updates
- Added websocket_service.py to handle WebSocket connections and manage APK analysis tasks.
- Integrated progress updates and completion notifications for APK analysis.
- Implemented caching mechanism for analysis results.
- Added batch analysis capability for multiple APKs.
- Enhanced error handling and logging throughout the analysis process.

chore: Update Flask dependencies

- Created flask_requirements.txt with core Flask and additional dependencies for machine learning and data processing.

config: Add Nginx configuration for Flask API

- Configured Nginx to serve as a reverse proxy for the Flask application.
- Implemented rate limiting, CORS headers, and security headers.
- Added health check endpoint for monitoring.

build: Create batch script to start Flask API

- Added start_flask_api.bat to automate the setup and launch of the Flask API.
- Included environment variable configuration and dependency installation.

test: Add comprehensive tests for Flask API

- Developed test_flask_api.py to validate health check, single scan, and batch scan endpoints.
- Implemented dummy APK file creation for testing purposes.
- Ensured proper cleanup of test files after execution.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,68 @@
-version: "3.9"
-
 services:
-  ml:
+  # Flask ML Backend
+  flask-ml:
     build: .
-    container_name: fake-apk-ml
+    container_name: fake-apk-flask
     env_file:
       - .env
+    environment:
+      - FLASK_HOST=0.0.0.0
+      - FLASK_PORT=9000
+      - FLASK_DEBUG=false
     ports:
       - "9000:9000"
     volumes:
-      - ./:/app
+      - ./artifacts:/app/artifacts
+      - ./models:/app/models
+    command: python flask_app/main.py
+    restart: unless-stopped
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "python",
+          "-c",
+          "import requests; requests.get('http://localhost:9000/', timeout=5)",
+        ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
+
+  # FastAPI ML Backend (alternative - can run both)
+  fastapi-ml:
+    build: .
+    container_name: fake-apk-fastapi
+    env_file:
+      - .env
+    ports:
+      - "9001:9000"
+    volumes:
       - ./artifacts:/app/artifacts
       - ./models:/app/models
     command: uvicorn ml.infer_service:app --host 0.0.0.0 --port 9000 --log-level warning --no-access-log
+    restart: unless-stopped
+    profiles: ["fastapi"]
 
+  # Streamlit UI (optional)
   streamlit:
     build: .
     container_name: fake-apk-ui
     env_file:
       - .env
     environment:
-      - ML_SERVICE_URL=http://ml:9000
+      - ML_SERVICE_URL=http://flask-ml:9000
     depends_on:
-      - ml
+      flask-ml:
+        condition: service_healthy
     ports:
       - "8501:8501"
     volumes:
       - ./:/app
     command: streamlit run ml/streamlit_app.py --server.port 8501 --server.address 0.0.0.0
+    restart: unless-stopped
+    profiles: ["streamlit"]
 
 networks:
   default:
     name: fake-apk-net
-
