--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,12 @@ rapidfuzz==3.9.7
 streamlit==1.37.1
 xlsxwriter==3.2.0
 python-dotenv==1.0.1
+flask==3.0.0
+flask-cors==4.0.0
 python-docx==1.1.2
 django==5.1.5
 djangorestframework==3.14.0
 django-cors-headers==4.4.0
 requests==2.32.3
+websockets==13.1
 
