--- a/requirements.prod.txt
+++ b/requirements.prod.txt
@@ -1,27 +1,33 @@
-# Core ML dependencies
-numpy>=1.21.0
-pandas>=1.3.0
-scikit-learn>=1.0.0
-xgboost>=1.5.0
-joblib>=1.1.0
+# Core ML and Data Processing (Production)
+numpy>=1.26.0
+pandas>=2.1.0
+scikit-learn>=1.3.0
+xgboost>=2.0.0
+joblib>=1.3.0
+shap>=0.44.0
 
-# APK analysis
-androguard>=3.4.0
-apkleaks>=2.6.0
+# APK Analysis
+androguard>=4.1.0
 
-# API framework
-fastapi>=0.68.0
-uvicorn[standard]>=0.15.0
-python-multipart>=0.0.5
+# Text Processing and Similarity
+rapidfuzz>=3.5.0
 
-# Utilities
-rapidfuzz>=2.0.0
-python-dotenv>=0.19.0
+# Environment and Configuration
+python-dotenv>=1.0.0
 
-# SHAP for model explanations
-shap>=0.40.0
+# HTTP and API
+requests>=2.31.0
 
-# HTTP client for health checks
-requests>=2.25.0
+# FastAPI (Primary ML API)
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+python-multipart>=0.0.6
 
-# Note: Streamlit is excluded for production deployment
+# Flask (Alternative API - optional)
+flask>=3.0.0
+flask-cors>=4.0.0
+werkzeug>=3.0.0
+
+# Production WSGI Servers
+gunicorn>=21.2.0
+waitress>=3.0.0
