--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,41 @@
-androguard==4.1.3
-pandas==2.2.2
-scikit-learn==1.5.1
-xgboost==2.1.0
-joblib==1.4.2
-fastapi==0.112.0
-uvicorn[standard]==0.30.6
-python-multipart==0.0.9
-shap==0.45.1
-mlflow==2.15.1
-rapidfuzz==3.9.7
-streamlit==1.37.1
-xlsxwriter==3.2.0
-python-dotenv==1.0.1
-flask==3.0.0
-flask-cors==4.0.0
-python-docx==1.1.2
-requests==2.32.3
-websockets==13.1
+# Core ML and Data Processing
+numpy>=1.26.0
+pandas>=2.1.0
+scikit-learn>=1.3.0
+xgboost>=2.0.0
+joblib>=1.3.0
+shap>=0.44.0
+
+# APK Analysis
+androguard>=4.1.0
+
+# Text Processing and Similarity
+rapidfuzz>=3.5.0
+
+# Environment and Configuration
+python-dotenv>=1.0.0
+PyYAML>=6.0.0
+
+# HTTP and API
+requests>=2.31.0
+
+# FastAPI (for original ML API)
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+python-multipart>=0.0.6
+
+# Flask (for alternative API)
+flask>=3.0.0
+flask-cors>=4.0.0
+werkzeug>=3.0.0
+
+# Production WSGI Server (for Flask)
+waitress>=3.0.0
+
+# Streamlit (for UI)
+streamlit>=1.28.0
+
+# Development and Testing
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
 
