Add enhanced Gemini API integration and advanced features: Professional cybersecurity analysis with expert AI explanations, enhanced SHAP analysis with debug logging, processing metadata, file name preservation, and enterprise-grade security insights

--- a/requirements.prod.txt
+++ b/requirements.prod.txt
@@ -17,6 +17,7 @@ python-dotenv>=1.0.0
 
 # HTTP and API
 requests>=2.31.0
+google-generativeai>=0.3.0
 
 # FastAPI (Primary ML API)
 fastapi>=0.104.0
